029_num_seq/grade.txt
Grading at 09/19/2019:15:06:09.924258
For commit ID a419ae8a64f83f79ae015a0e1364af474c292293
Grading at Thu Sep 19 11:06:08 EDT 2019
[32mSuccessfully compiled ['step1.c'].[0m
Checking for 'int seq1(int x)'
[32mfound 'int seq1(int x)' in your source code 'step1.c'[0m
Checking for 'void printSeq1Range(int low, int high)'
[32mfound 'void printSeq1Range(int low, int high)' in your source code 'step1.c'[0m
step1.c: In function ‘old_mainpOFLJb’:
step1.c:131:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors

[31mError: failed to compile your code[0m
[31merror there is output in your function seq() in step1.c[0m
[32mSuccessfully compiled ['step2.c'].[0m
Checking for 'int seq2(int x)'
[32mfound 'int seq2(int x)' in your source code 'step2.c'[0m
Checking for 'int sumSeq2(int low, int high)'
[32mfound 'int sumSeq2(int low, int high)' in your source code 'step2.c'[0m
step2.c: In function ‘old_mainwIlGda’:
step2.c:172:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors

[31mError: failed to compile your code[0m
[31merror there is output in your function seq() in step2.c[0m
[32mSuccessfully compiled ['step3.c'].[0m
Checking for 'int seq3(int x, int y)'
[32mfound 'int seq3(int x, int y)' in your source code 'step3.c'[0m
Checking for 'int countEvenInSeq3Range(int xLow, int xHi, int yLow, int yHi)'
[32mfound 'int countEvenInSeq3Range(int xLow, int xHi, int yLow, int yHi)' in your source code 'step3.c'[0m
step3.c: In function ‘old_mainmJnjbL’:
step3.c:180:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1: all warnings being treated as errors

[31mError: failed to compile your code[0m
[31merror there is output in your function seq() in step3.c[0m
Overall Grade: NO GRADE YET
